# OS_Colloquium1

./: README.md  kollokvium.rar
kollokvium/: CMakeLists.txt  CMakePresets.json  Main.cpp  func.cpp  func.h  tests.cpp
kollokvium/Array_func/: array_func.cpp  array_func.h
kollokvium/LinkedList/: LinkedList.cpp  LinkedList.h
kollokvium/Math_func/: Math_func.cpp  Math_func.h
kollokvium/common/: Node.h
